--- a/index.html
+++ b/index.html
@@ -4,17 +4,451 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Document</title>
+    <title>lokalise</title>
 </head>
 <body>
-    <header>
-
+    <header class="header">
+<div class="container container-header">
+    <nav class="nav">
+        <div class="nav-links">
+        <a class="logo" href="./index.html">
+            <img src="./img/logo.png" alt="logo">
+        </a>
+        <ul class="menu">
+            <li class="menu_item">
+                <a class="menu-item-link" href="#">Product</a>
+            </li>
+            <li class="menu_item">
+                <a class="menu-item-link" href="#">Features</a>
+            </li>
+            <li class="menu_item">
+                <a class="menu-item-link" href="#">Pricing</a>
+            </li>
+            <li class="menu_item">
+                <a class="menu-item-link" href="#">Case studies</a>
+            </li>
+            <li class="menu_item">
+                <a class="menu-item-link" href="#">Resources</a>
+            </li>
+        </ul>
+    </div>
+    <div class="buttons">
+            <button class="sub-button" >
+                <a class="button" href="#">Log In</a></button>
+            <button class="sub-button button-orange">
+                <a class="button" href="#">Try it free</a>
+            </button> 
+    </div>
+    </nav>
+</div>
     </header>
     <main>
+        <section class="section">
+            <div class="container container-2">
+                <div class="accelerate">
+                <div class="accelerate-sub">
+                <h1 class="title">Accelerate localization from code to delivery</h1>
+                <div class="sub-title">
+                    <p>A localization and translation management platform for agile teams. Embrace automation, workflow transparency, and fast project delivery.</p>
+                </div>
+            </div>
+            <div class="buttons-accelerate">
+                <button class="sub-button-2 button-orange-2">
+                <a class="button-2" href="#">Try it free</a>
+                </button>
+                <button class="sub-button-2 ">
+                <a class="button-2" href="#">Book a demo</a>
+                </button> 
+            </div>
+            <div class="days">
+                <p>Try all features for 14 days · No credit card required</p>
+            </div>
+        </div>
+            <div class="img">
+                <img src="./img/peoples.png" alt="img">
+            </div>
+            </div>
+        </section>
+        <section class="section section-2">
+            <div class="container container-3">
+                <div class="companies">
+                <div class="sub-companies">
+                    <h2>The preferred localization tool of 1500+ companies</h2>
+                </div>
+            </div>
+                <div class="img-box">
+                    <a class="sub-img-box" href="#"><img src="./icons/specialized.png" alt="icons"></a>
+                    <a class="sub-img-box" href="#"><img src="./icons/virgin-mobile.png" alt="icons"></a>
+                    <a class="sub-img-box" href="#"><img src="./icons/tidal.png" alt="icons"></a>
+                    <a class="sub-img-box" href="#"><img src="./icons/revolut.png" alt="icons"></a>
+                    <a class="sub-img-box" href="#"><img src="./icons/yelp.png" alt="icons"></a>
+                    <a class="sub-img-box" href="#"><img src="./icons/daimler.png" alt="icons"></a>
+                </div>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <div class="advantages advantages-right advantages-first">
+                    <div class="advantages-1">
+                    <h2 class="advantages-title">Control the localization process</h2>
+                    <div class="sub-advantages">
+                        <p>Collaborate with your team in a single workspace. Add and assign tasks, track progress, and enjoy a seamless localization workflow where you know who is doing what and when.</p>
+                    </div>
+                    <a class="start-now" href="#" >Start now</a>
+                </div>
+                    <div class="advantages-img-right">
+                        <img src="./img/project-app.png" alt="img">
+                    </div>
+                </div>
 
+                <div class="advantages advantages-left advantages-second">
+                    <div class="advantages-img-left">
+                        <img src="./img/time-to-market.png" alt="img">
+                    </div>
+                    <div class="advantages-2">
+                    <h2 class="advantages-title">Shorten time to market</h2>
+                    <div class="sub-advantages">
+                        <p>Localize your product in parallel with the development cycle. Use the Adobe XD, Figma, and Sketch plugins to start working on translations as soon as the product design is ready. No more idle waiting.</p>
+                    </div>
+                    <a class="start-now" href="#" >Start now</a>
+                </div>
+                </div>
+
+                <div class="advantages advantages-right advantages-second">
+                    <div class="advantages-3">
+                    <h2 class="advantages-title">Ensure quality</h2>
+                    <div class="sub-advantages">
+                        <p>Use built-in tools — e.g. translation memory, machine translation, and QA checks — to enhance the quality and cohesion of translations. Add product screenshots for context and use the in-context editors for instant previews.</p>
+                    </div>
+                    <a class="start-now" href="#" >Start now</a>
+                </div>
+                    <div class="advantages-img-right">
+                        <img src="./img/quality.png" alt="img">
+                    </div>
+                </div>
+
+                <div class="advantages advantages-left advantages-second">
+                    <div class="advantages-img-left">
+                        <img src="./img/work.png" alt="img">
+                    </div>
+                    <div class="advantages-4">
+                    <h2 class="advantages-title">Less work for developers</h2>
+                    <div class="sub-advantages">
+                        <p>Eliminate the hassle of localization and let developers get back to their main tasks. Save hours with the powerful API, CLI, mobile SDKs, and integrations with  GitHub, Bitbucket, JIRA, and more.</p>
+                    </div>
+                    <a class="start-now" href="#" >Start now</a>
+                </div>
+                </div>
+            </div>
+        </section>
+        <section class="section section-4">
+            <div class="container container-4">
+                <h2 class="lokalize-title">What can you localize with Lokalise?</h2>
+<div class="lokalize">
+    <div class="sub-lokalize">
+        <div class="lokalize-img">
+            <img src="./icons/Rectangle.png" alt="img">
+        </div>
+        <h3>Web apps</h3>
+        <div class="lokalize-text-1">
+            <p class="lokalize-text">Any kind of web apps — backend, frontend, single page, blogs — you name it.</p></div>
+    </div>
+    <div class="sub-lokalize">
+        <div class="lokalize-img">
+            <img src="./icons/Rectangle (1).png" alt="img">
+        </div>
+        <h3>Mobile apps</h3>
+        <div class="lokalize-text-1">
+            <p class="lokalize-text">Upload any mobile platform language files. Embed Lokalise iOS SDK or Lokalise Android SDK if you prefer. </p></div>
+    </div>
+    <div class="sub-lokalize">
+        <div class="lokalize-img">
+            <img src="./icons/Rectangle (2).png" alt="img">
+        </div>
+        <h3>Games</h3>
+        <div class="lokalize-text">
+            <p class="lokalize-text-1">Our cloud software is trusted by many leading game developers around the world.</p></div>
+    </div>
+    <div class="sub-lokalize">
+        <div class="lokalize-img">
+            <img src="./icons/Rectangle (3).png" alt="img">
+        </div>
+        <h3>Documents</h3>
+        <div class="lokalize-text">
+            <p class="lokalize-text-1">Upload your DOCX and static HTML files.</p>
+        </div>
+    </div>
+    <div class="sub-lokalize">
+        <div class="lokalize-img">
+            <img src="./icons/Rectangle (4).png" alt="img">
+        </div>
+        <h3>Marketing e-mails</h3>
+        <div class="lokalize-text">
+            <p class="lokalize-text-1">Integrate with Salesforce Marketing Cloud (coming soon) or translate static e-mails.</p></div>
+    </div>
+    <div class="sub-lokalize">
+        <div class="lokalize-img">
+            <img src="./icons/Rectangle (5).png" alt="img">
+        </div>
+        <h3>IoT</h3>
+        <div class="lokalize-text">
+            <p class="lokalize-text-1">We support most popular localization file formats.</p></div>
+    </div>
+</div>
+            </div>
+        </section>
+<section class="section">
+    <div class="container container-5">
+        <h2 class="team-title">Boost your localization team’s productivity tenfold</h2>
+<div class="team">
+    <div class="sub-team">
+        <div class="team-img">
+            <img class="team-img" src="./icons/Rectangle (6).png" alt="img">
+        </div>
+        <h3 class="team-sub-title team-first">Managers</h3>
+        <div class="team-text-1">
+            <p class="team-text">Update existing and launch new features and products while simultaneously localizing them in multiple languages. Streamline your team's workflow, maximize productivity, and speed up expansion to other markets.</p>
+        </div>
+        <a href="#" class="team-link">Learn more</a>
+    </div>
+                <div class="sub-team">
+                    <div class="team-img">
+                        <img class="team-img" src="./icons/Rectangle (7).png" alt="img">
+                    </div>
+                    <h3 class="team-sub-title team-second">Developers</h3>
+                    <div class="team-text-1">
+                        <p class="team-text">Set up an integration with your code repository or your own custom SDK via Lokalise's powerful API. Do that once, and every time you make changes in the code, they'll be automatically imported to Lokalise for translation.</p>
+                    </div>
+                    <a href="#" class="team-link">Learn more</a>
+                </div>
+                            <div class="sub-team">
+                                <div class="team-img">
+                                    <img class="team-img" src="./icons/Rectangle (8).png" alt="img">
+                                </div>
+                                <h3 class="team-sub-title team-third">Translators</h3>
+                                <div class="team-text-1">
+                                    <p class="team-text">Eliminate double-work and neverending revisions with visual context (screenshots) and live previews. Improve the quality and speed of your translations with built-in CAT tools, like autocomplete, inline machine translation, and translation memory.</p>
+                                </div>
+                                <a href="#" class="team-link">Learn more</a>
+                            </div>
+        </div>
+        </section>
+        <section class="section section-5">
+            <div class="container container-6">
+                <div class="revolut">
+<div class="sub-revolut">
+<div class="revolut-text">
+    <p class="revolut-quote">“Lokalise has turned a task we were dreading into an absolute pleasure. Great platform, intuitive UX, powerful API. The automatic text recognition for screenshots has been a lifesaver, and over-the-air updates are the icing on the cake.”</p>
+    <p class="revolut-autor">Edward Cooper, Chief Mobile Officer</p>
+</div>
+<div class="revolute-logo">
+    <img src="./icons/Frame (8).png" alt="logo">
+</div>
+</div>
+<div class="man">
+<img class="revolute-men" src="./icons/Frame (9).png" alt="men" >
+</div>
+            </div>
+        </div>
+        </section>
+        <section class="section section-6">
+            <div class="container">
+<div class="management">
+    <div class="menegement-1">
+    <div class="cake">
+        <img class="cake-img" src="./icons/image 1.png" alt="img">
+    </div>
+    <div class="management-text">
+        <h3 class="sub-menegment-text">The most-loved translation management software</h3>
+    </div>
+</div>
+<div class="rating">
+    <div class="rating-1">
+<img class="rating-img" src="./icons/Frame (10).png" alt="img">
+    </div>
+    <div class="rating-2">
+        <img class="rating-img" src="./icons/Frame (11).png" alt="img">
+    </div>
+</div>
+</div>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <div class="integrate">
+                    <div class="sub-integrate">
+                    <h2 class="integrate-title">
+                        Integrate Lokalise with your work tools
+                    </h2>
+                </div>
+                <div class="text-2">
+                    <div class="integrate-text">
+                        <p class="sub-integrate-text">Automate processes, eliminate routine tasks, and track progress with ease.</p>
+                    </div>
+                </div>
+                    <div class="integrate-img">
+                        <img src="./img/lokalise.png" alt="img">
+                    </div>
+                    <button class="integrate-button">
+                        <a href="#" class="integrate-button-link">See all integrations</a>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="section-7">
+            <div class="container">
+                <div class="easy">
+                    <div class="sub-easy">
+                    <h2 class="easy-title">
+                        Localization made easy. Why wait?
+                    </h2>
+                </div>
+                <div class="easy-2">
+                    <div class="easy-text">
+                        <p class="sub-easy-text">Try for free or let us show you how it works.</p>
+                    </div>
+                </div>
+                    <button class="easy-button">
+                        <a href="#" class="easy-button-link">Try it free</a>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="section section-8">
+            <div class="container">
+                <div class="studies">
+                    <div class="case">
+                        <h2 class="case-title">Case Studies</h2>
+                        <div class="case-img">
+                            <img class="case-img-2" src="./img/Rectangle (9).png" alt="img">
+                        </div>
+                        <div class="case-logo">
+                            <img class="case-logo-img" width="80px" src="./icons/specialized.png" alt="img">
+                        </div>
+                        <div class="case-text">
+                            <p class="sub-case-text">Riding towards global success with a 100% teammate enthusiasm</p>
+                            <p class="read">Read more</p>
+                        </div>
+                    </div>
+<div class="sitemap-1">
+<div class="sitemap">
+    <h6 class="sitemap__title">Product</h6>
+<ul class="sitemap__liste" >
+    <li>
+       <a class="sitemap__list" href="#">For developers</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">For managers</a> 
+     </li>
+     <li>
+        <a class="sitemap__list" href="#">For translators</a> 
+     </li>
+     <li>
+        <a class="sitemap__list" href="#">For designers</a> 
+     </li>
+     <li>
+        <a class="sitemap__list" href="#">Integrations</a> 
+     </li>
+     <li>
+        <a class="sitemap__list" href="#">Security</a> 
+     </li>
+     <li>
+        <a class="sitemap__list" href="#">Pricing</a> 
+     </li>
+     <li>
+        <a class="sitemap__list" href="#">Automations</a> 
+     </li>
+        </div>
+<div class="sitemap">
+    <h6 class="sitemap__title">Support</h6>
+<ul class="sitemap__liste" >
+     <li>
+        <a class="sitemap__list" href="#">Contact</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">Documentation</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">Status</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">Product Updates</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">CLI Tool</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">API Reference</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">iOS and Android SDK</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">Supported File Formats</a> 
+    </li>
+</div>
+<div class="sitemap">
+    <h6 class="sitemap__title">Company</h6>
+<ul class="sitemap__liste" >
+     <li>
+        <a class="sitemap__list" href="#">About</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">Blog</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">Careers | We`re Hiring</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">Case Studies</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">Media Kit</a> 
+    </li>
+</div>
+<div class="sitemap">
+    <h6 class="sitemap__title">Legal</h6>
+<ul class="sitemap__liste" >
+     <li>
+        <a class="sitemap__list" href="#">Terms of Service</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">Privacy Policy</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">Cookie Policy</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">Privacy Shield</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">DPA</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">List of Sub-processors</a> 
+    </li>
+    <li>
+        <a class="sitemap__list" href="#">Candidates Privacy Notice</a> 
+    </li>
+</div>
+</div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-2">
+<div class="footer-logo">
+    <img class="footer-logo-img" src="./img/logo2.png" alt="#">
+</div>
+<div class="footer-text">
+<p class="footer-text">Localization workflow for your web and mobile apps, games and digital content.</p>
+</div>
+</div>
+<div class="info">
+    <p class="info-text">©2001-2020</p>
+    <p class="info-text">All rights reserved.</p>
+</div>
     </footer>
     <script src="./js/main.js"></script>
 </body>
