--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             </div>
             <div class="buttons-accelerate">
                 <button class="sub-button-2 button-orange-2">
-                <a class="button-2" href="#">Try it free</a>
+                <a class="button-2 button-white" href="#">Try it free</a>
                 </button>
                 <button class="sub-button-2 ">
-                <a class="button-2" href="#">Book a demo</a>
+                <a class="button-2 " href="#">Book a demo</a>
                 </button> 
             </div>
             <div class="days">
@@ -92,7 +92,7 @@
                     <div class="advantages-1">
                     <h2 class="advantages-title">Control the localization process</h2>
                     <div class="sub-advantages">
-                        <p>Collaborate with your team in a single workspace. Add and assign tasks, track progress, and enjoy a seamless localization workflow where you know who is doing what and when.</p>
+                        <p>Collaborate with your team in a single workspace. Add and assign <a href="#" class="tasks">tasks</a>, track progress, and enjoy a seamless localization workflow where you know who is doing what and when.</p>
                     </div>
                     <a class="start-now" href="#" >Start now</a>
                 </div>
@@ -108,7 +108,7 @@
                     <div class="advantages-2">
                     <h2 class="advantages-title">Shorten time to market</h2>
                     <div class="sub-advantages">
-                        <p>Localize your product in parallel with the development cycle. Use the Adobe XD, Figma, and Sketch plugins to start working on translations as soon as the product design is ready. No more idle waiting.</p>
+                        <p>Localize your product in parallel with the development cycle. Use the <a href="#" class="link-program">Adobe XD</a>, <a href="#" class="link-program">Figma</a> , and <a href="#" class="link-program">Sketch</a> plugins to start working on translations as soon as the product design is ready. No more idle waiting.</p>
                     </div>
                     <a class="start-now" href="#" >Start now</a>
                 </div>
@@ -118,7 +118,7 @@
                     <div class="advantages-3">
                     <h2 class="advantages-title">Ensure quality</h2>
                     <div class="sub-advantages">
-                        <p>Use built-in tools — e.g. translation memory, machine translation, and QA checks — to enhance the quality and cohesion of translations. Add product screenshots for context and use the in-context editors for instant previews.</p>
+                        <p>Use built-in tools — e.g. <a href="#" class="ensure-link">translation memory</a>, machine translation, and <a href="#" class="ensure-link">QA checks</a> — to enhance the quality and cohesion of translations. Add product <a href="#" class="ensure-link">screenshots</a> for context and use the <a href="#" class="ensure-link">in-context editors</a> for instant previews.</p>
                     </div>
                     <a class="start-now" href="#" >Start now</a>
                 </div>
@@ -134,7 +134,7 @@
                     <div class="advantages-4">
                     <h2 class="advantages-title">Less work for developers</h2>
                     <div class="sub-advantages">
-                        <p>Eliminate the hassle of localization and let developers get back to their main tasks. Save hours with the powerful API, CLI, mobile SDKs, and integrations with  GitHub, Bitbucket, JIRA, and more.</p>
+                        <p>Eliminate the hassle of localization and let developers get back to their main tasks. Save hours with the powerful <a href="#" class="ensure-link">API</a>, <a href="#" class="ensure-link">CLI</a>, <a href="#" class="ensure-link">mobile SDKs</a>, and integrations with  <a href="#" class="ensure-link">GitHub</a>, <a href="#" class="ensure-link">Bitbucket</a>, <a href="#" class="ensure-link">JIRA</a>, and more.</p>
                     </div>
                     <a class="start-now" href="#" >Start now</a>
                 </div>
@@ -314,8 +314,8 @@
                 </div>
             </div>
         </section>
-        <section class="section section-8">
-            <div class="container">
+    </main>
+        <footer class="footer">
                 <div class="studies">
                     <div class="case">
                         <h2 class="case-title">Case Studies</h2>
@@ -433,10 +433,7 @@
 </div>
 </div>
                 </div>
-            </div>
-        </section>
-    </main>
-    <footer class="footer">
+<div class="footer-box">
         <div class="footer-2">
 <div class="footer-logo">
     <img class="footer-logo-img" src="./img/logo2.png" alt="#">
@@ -448,6 +445,7 @@
 <div class="info">
     <p class="info-text">©2001-2020</p>
     <p class="info-text">All rights reserved.</p>
+</div>
 </div>
     </footer>
     <script src="./js/main.js"></script>
